# terraform-state-mover

./: .gitignore  README.md  cabal.project  flake.nix  hie.yaml  package.nix  terraform-state-mover.cabal  terraform-state-mover.nix
.github/workflows/: CI.yaml
app/: Main.hs
example/: main.tf
nix/: docker-bundle.nix  docker.nix
src/: ConsoleColors.hs  Lib.hs  main.hs
test/: Spec.hs
